oapi-codegen for api models
