# internal/shared/models/api/callstatus.go
@@ -7,40 +7,20 @@ import (
 	appModels "github.com/OkciD/whos_on_call/internal/shared/models"
 )
 
-type callState string
-
-const (
-	callStateInactive callState = "inactive"
-	callStateActive   callState = "active"
-)
-
-type deviceStatus struct {
-	Device
-	Features []DeviceFeature `json:"features"`
-}
-
-type userStatus struct {
-	User    User           `json:"user"`
-	State   callState      `json:"state"`
-	Devices []deviceStatus `json:"devices"`
-}
-
-type CallStatus []userStatus
-
 func FromAppCallStatus(appCallStatus appModels.CallStatus) (CallStatus, error) {
 	apiCallStatus := make(CallStatus, 0, len(appCallStatus))
 
 	for _, appUserStatus := range appCallStatus {
-		apiUserStatus := userStatus{
+		apiUserStatus := UserStatus{
 			User:    *FromUserAppModel(appUserStatus.User),
-			Devices: make([]deviceStatus, 0, len(appUserStatus.Devices)),
+			Devices: make([]DeviceStatus, 0, len(appUserStatus.Devices)),
 		}
 
 		switch appUserStatus.State {
 		case appModels.CallStateInactive:
-			apiUserStatus.State = callStateInactive
+			apiUserStatus.State = CallStateInactive
 		case appModels.CallStateActive:
-			apiUserStatus.State = callStateActive
+			apiUserStatus.State = CallStateActive
 		default:
 			return nil, errors.ErrCallStatusStateInvalid
 		}
@@ -51,8 +31,10 @@ func FromAppCallStatus(appCallStatus appModels.CallStatus) (CallStatus, error) {
 				return nil, fmt.Errorf("error transforming api device to app: %w", err)
 			}
 
-			apiDeviceStatus := deviceStatus{
-				Device:   *apiDevice,
+			apiDeviceStatus := DeviceStatus{
+				Id:       int32(apiDevice.Id),
+				Name:     apiDevice.Name,
+				Type:     DeviceType(apiDevice.Type),
 				Features: make([]DeviceFeature, 0, len(appDeviceStatus.Features)),
 			}
 
