# internal/shared/models/api/gen.go
@@ -1,0 +1,230 @@
+// Package api provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.6.0 DO NOT EDIT.
+package api
+
+import (
+	"time"
+)
+
+const (
+	ApiKeyAuthScopes = "ApiKeyAuth.Scopes"
+)
+
+// Defines values for CallState.
+const (
+	CallStateActive   CallState = "active"
+	CallStateInactive CallState = "inactive"
+)
+
+// Valid indicates whether the value is a known member of the CallState enum.
+func (e CallState) Valid() bool {
+	switch e {
+	case CallStateActive:
+		return true
+	case CallStateInactive:
+		return true
+	default:
+		return false
+	}
+}
+
+// Defines values for DeviceFeatureStatus.
+const (
+	DeviceFeatureStatusActive   DeviceFeatureStatus = "active"
+	DeviceFeatureStatusInactive DeviceFeatureStatus = "inactive"
+)
+
+// Valid indicates whether the value is a known member of the DeviceFeatureStatus enum.
+func (e DeviceFeatureStatus) Valid() bool {
+	switch e {
+	case DeviceFeatureStatusActive:
+		return true
+	case DeviceFeatureStatusInactive:
+		return true
+	default:
+		return false
+	}
+}
+
+// Defines values for DeviceFeatureType.
+const (
+	DeviceFeatureTypeCamera DeviceFeatureType = "camera"
+	DeviceFeatureTypeMic    DeviceFeatureType = "mic"
+)
+
+// Valid indicates whether the value is a known member of the DeviceFeatureType enum.
+func (e DeviceFeatureType) Valid() bool {
+	switch e {
+	case DeviceFeatureTypeCamera:
+		return true
+	case DeviceFeatureTypeMic:
+		return true
+	default:
+		return false
+	}
+}
+
+// Defines values for DeviceType.
+const (
+	DeviceTypeLaptop DeviceType = "laptop"
+	DeviceTypeMobile DeviceType = "mobile"
+	DeviceTypePC     DeviceType = "pc"
+)
+
+// Valid indicates whether the value is a known member of the DeviceType enum.
+func (e DeviceType) Valid() bool {
+	switch e {
+	case DeviceTypeLaptop:
+		return true
+	case DeviceTypeMobile:
+		return true
+	case DeviceTypePC:
+		return true
+	default:
+		return false
+	}
+}
+
+// Defines values for ErrorResponseErrCode.
+const (
+	BadJson         ErrorResponseErrCode = "bad json"
+	Duplicate       ErrorResponseErrCode = "duplicate"
+	Internal        ErrorResponseErrCode = "internal"
+	InvalidUrlParam ErrorResponseErrCode = "invalid url param"
+	NotFound        ErrorResponseErrCode = "not found"
+	NotImpl         ErrorResponseErrCode = "not impl"
+	Unauthorized    ErrorResponseErrCode = "unauthorized"
+	Unknown         ErrorResponseErrCode = "unknown"
+)
+
+// Valid indicates whether the value is a known member of the ErrorResponseErrCode enum.
+func (e ErrorResponseErrCode) Valid() bool {
+	switch e {
+	case BadJson:
+		return true
+	case Duplicate:
+		return true
+	case Internal:
+		return true
+	case InvalidUrlParam:
+		return true
+	case NotFound:
+		return true
+	case NotImpl:
+		return true
+	case Unauthorized:
+		return true
+	case Unknown:
+		return true
+	default:
+		return false
+	}
+}
+
+// CallState Call state for the user
+type CallState string
+
+// CallStatus defines model for CallStatus.
+type CallStatus = []UserStatus
+
+// Device defines model for Device.
+type Device struct {
+	// Id Device ID
+	Id int32 `json:"id"`
+
+	// Name Device name
+	Name string `json:"name"`
+
+	// Type Device type
+	Type DeviceType `json:"type"`
+}
+
+// DeviceFeature defines model for DeviceFeature.
+type DeviceFeature struct {
+	// Id Feature ID
+	Id int32 `json:"id"`
+
+	// LastActive Last active timestamp in RFC3339 format
+	LastActive *time.Time `json:"lastActive,omitempty"`
+
+	// Status Device feature status
+	Status DeviceFeatureStatus `json:"status"`
+
+	// Type Device feature type
+	Type DeviceFeatureType `json:"type"`
+}
+
+// DeviceFeatureInput defines model for DeviceFeatureInput.
+type DeviceFeatureInput struct {
+	// Status Device feature status
+	Status DeviceFeatureStatus `json:"status"`
+
+	// Type Device feature type
+	Type DeviceFeatureType `json:"type"`
+}
+
+// DeviceFeatureStatus Device feature status
+type DeviceFeatureStatus string
+
+// DeviceFeatureType Device feature type
+type DeviceFeatureType string
+
+// DeviceInput defines model for DeviceInput.
+type DeviceInput struct {
+	// Name Device name
+	Name string `json:"name"`
+
+	// Type Device type
+	Type DeviceType `json:"type"`
+}
+
+// DeviceStatus defines model for DeviceStatus.
+type DeviceStatus struct {
+	Features []DeviceFeature `json:"features"`
+
+	// Id Device ID
+	Id int32 `json:"id"`
+
+	// Name Device name
+	Name string `json:"name"`
+
+	// Type Device type
+	Type DeviceType `json:"type"`
+}
+
+// DeviceType Device type
+type DeviceType string
+
+// ErrorResponse defines model for ErrorResponse.
+type ErrorResponse struct {
+	// ErrCode Error code
+	ErrCode ErrorResponseErrCode `json:"err_code"`
+}
+
+// ErrorResponseErrCode Error code
+type ErrorResponseErrCode string
+
+// User defines model for User.
+type User struct {
+	// Id User ID
+	Id int32 `json:"id"`
+
+	// Name User name
+	Name string `json:"name"`
+}
+
+// UserStatus defines model for UserStatus.
+type UserStatus struct {
+	Devices []DeviceStatus `json:"devices"`
+
+	// State Call state for the user
+	State CallState `json:"state"`
+	User  User      `json:"user"`
+}
+
+// CreateDeviceJSONRequestBody defines body for CreateDevice for application/json ContentType.
+type CreateDeviceJSONRequestBody = DeviceInput
+
+// UpsertDeviceFeatureJSONRequestBody defines body for UpsertDeviceFeature for application/json ContentType.
+type UpsertDeviceFeatureJSONRequestBody = DeviceFeatureInput
